--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,17 +1,25 @@
 [tool.poetry]
 name = "sword-converter"
-version = "0.1.0"
-description = "SWORD Converter"
+version = "0.2.0"
+description = "Generate JSON Files of Bible Texts from SWORD Modules"
 license = "GPL-3.0-or-later"
 authors = ["Evans <evans@fundi.dev>"]
 readme = "README.md"
 homepage = "https://github.com/evnskc/sword-converter"
 repository = "https://github.com/evnskc/sword-converter"
 documentation = "https://github.com/evnskc/sword-converter"
-keywords = ["SWORD", "Converter"]
+keywords = ["SWORD", "Converter", "Bible Text", "JSON"]
 
 [tool.poetry.dependencies]
-python = "^3.11"
+python = "^3.8"
+pysword = "^0.2.8"
+
+[tool.poetry.group.dev.dependencies]
+pytest = "^7.4.3"
+jsonschema = "^4.20.0"
+
+[tool.poetry.scripts]
+sword-converter = "sword_converter.__main__:main"
 
 [build-system]
 requires = ["poetry-core"]
