--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,14 @@
 [tool.poetry]
 name = "sword-converter"
-version = "0.2.0"
-description = "Generate JSON Files of Bible Texts from SWORD Modules"
+version = "1.0.0"
+description = "Generate JSON Files and SQLite Databases of Bible Texts from SWORD Modules"
 license = "GPL-3.0-or-later"
 authors = ["Evans <evans@fundi.dev>"]
 readme = "README.md"
 homepage = "https://github.com/evnskc/sword-converter"
 repository = "https://github.com/evnskc/sword-converter"
 documentation = "https://github.com/evnskc/sword-converter"
-keywords = ["SWORD", "Converter", "Bible Text", "JSON"]
+keywords = ["SWORD", "Converter", "Bible Text", "JSON", "SQLite"]
 
 [tool.poetry.dependencies]
 python = "^3.8"
@@ -16,6 +16,7 @@ pysword = "^0.2.8"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.3"
+pytest-xdist = "^3.5.0"
 jsonschema = "^4.20.0"
 
 [tool.poetry.scripts]
