--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,7 +20,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [ "3.8","3.9","3.10","3.11","3.12" ]
+        python-version: [ "3.10","3.11","3.12" ]
     steps:
       - name: Set up repository
         uses: actions/checkout@v4
@@ -31,4 +31,4 @@ jobs:
           python-version: ${{ matrix.python-version }}
 
       - name: Run tests
-        run: poetry run pytest -n auto
+        run: poetry run pytest
